--- a/facts.html
+++ b/facts.html
@@ -25,6 +25,9 @@
           <li class="site-navigation-item">
             <a  href="table.html">Таблица</a>
         </li>
+        <li class="site-navigation-item"> 
+          <a href="info.html">Информация о фильме</a>
+        </li>
         </ul>
       </nav>
   </section>
